feat: add optional body attribute to post modification route (removeImage) & add post attibutes to post creation/modification route responses
